<resources>
    <string name="app_name">Simple Bank Manager</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">LOG IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_username">"Welcome %1$s"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_balance">VIEW BALANCE</string>
    <string name="transfer_funds">TRANSFER FUNDS</string>
    <string name="calculate_exchange">CALCULATE EXCHANGE</string>
    <string name="pay_bills">PAY BILLS</string>
    <string name="balance">Balance:</string>
    <string name="current_balance">$%1$s</string>
    <string name="account_number">Account number</string>
    <string name="enter_amount">Enter amount</string>
    <string name="transfer">TRANSFER</string>
    <string name="successful_transfer">Transferred %1$s$ to account %2$s</string>
    <string name="unsuccessful_transfer">Not enough funds to transfer %1$s$$</string>
    <string name="convert_from">convert from</string>
    <string name="convert_to">convert to</string>
    <string name="calculate">CALCULATE</string>
    <string name="cannot_convert_to_same_currency">Cannot convert to same currency</string>
    <string name="result_conversion">%1$c%2$s = %3$c%4$s</string>
    <string name="enter_code">Enter code</string>
    <string name="show_bill_info">SHOW BILL INFO</string>
    <string name="error">Error</string>
    <string name="wrong_code">Wrong code</string>
    <string name="bill_info">Bill info</string>
    <string name="name">Name: %1$s</string>
    <string name="bill_code">BillCode: %1$s</string>
    <string name="amount">Amount: $%1$s</string>
    <string name="not_enough_funds">Not enough funds</string>
    <string name="confirm">CONFIRM</string>
    <string name="payment_was_successful">Payment for bill %1$s, was successful</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>

    <string-array name="currency">
        <item>EUR</item>
        <item>GBP</item>
        <item>USD</item>
    </string-array>
</resources>