<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/welcome_username"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_balance_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/button_shape"
        android:text="@string/view_balance"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/transfer_funds_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv" />

    <Button
        android:id="@+id/transfer_funds_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/button_shape"
        android:text="@string/transfer_funds"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_balance_btn"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv" />

    <Button
        android:id="@+id/calculate_exchange_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/button_shape"
        android:text="@string/calculate_exchange"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@id/pay_bills_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_balance_btn" />

    <Button
        android:id="@+id/pay_bills_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/button_shape"
        android:text="@string/pay_bills"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calculate_exchange_btn"
        app:layout_constraintTop_toBottomOf="@+id/view_balance_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>