<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CalculateExchangeFragment">

    <TextView
        android:id="@+id/convert_from_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="160dp"
        android:text="@string/convert_from"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/convert_to_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/convert_to"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/convert_from_tv"
        app:layout_constraintTop_toBottomOf="@id/convert_from_tv" />

    <Spinner
        android:id="@+id/spinner_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@id/convert_from_tv"
        app:layout_constraintStart_toEndOf="@id/convert_from_tv" />

    <Spinner
        android:id="@+id/spinner_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/convert_to_tv"
        app:layout_constraintStart_toStartOf="@id/spinner_from" />

    <TextView
        android:id="@+id/calculated_result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/calculate_exchange_et"
        app:layout_constraintEnd_toEndOf="@id/calculate_exchange_et"
        app:layout_constraintStart_toStartOf="@id/calculate_exchange_et" />

    <EditText
        android:id="@+id/calculate_exchange_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/calculate_btn"
        app:layout_constraintEnd_toEndOf="@id/calculate_btn"
        app:layout_constraintStart_toStartOf="@+id/calculate_btn" />

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_high"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/button_shape"
        android:text="@string/calculate"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>